--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                 
                
                 <p>Giacomo Bormetti</p>
-                <h4>Deep calibration with random smiles <a href='speaker-details_bormetti.html' target='_blank' rel='noopener noreferrer'i class="venobox fa fa-link"  data-vbtype="iframe" aria-hidden="true"></i> </a></h4> 
+                <h4>Neural networks unleashed: Joint SPX/VIX calibration going fast <a href='speaker-details_bormetti.html' target='_blank' rel='noopener noreferrer'i class="venobox fa fa-link"  data-vbtype="iframe" aria-hidden="true"></i> </a></h4> 
                 <br>
                 <p>Lech Grzelack </p>
                 <h4>On Volatility Parametrizations with Random Coefficients <a href='speaker-details_grzelack.html' target='_blank' rel='noopener noreferrer'i class="venobox fa fa-link"  data-vbtype="iframe" aria-hidden="true"></i> </a></h4> 
