--- a/speaker-details_bormetti.html
+++ b/speaker-details_bormetti.html
@@ -66,7 +66,7 @@
                                 target='_blank' rel='noopener noreferrer'><i class="fa fa-university"
                                     aria-hidden="true"></i></a>
                         </div>
-                        <a>Title<p>Deep calibration with random smiles</p>
+                        <a>Title<p>Neural networks unleashed: Joint SPX/VIX calibration going fast</p>
                             <!-- <br> -->
                             Authors<p>Fabio Baschetti, Giacomo Bormetti, and Pietro Rossi</p>
                             <!-- <br> -->
