--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
             <br> 
             Alessandro Barbiero &nbsp;  <a href='https://www.unimi.it/en/ugov/person/alessandro-barbiero' target='_blank' rel='noopener noreferrer'><i class="fa fa-external-link" aria-hidden="true"></i></a> 
             <br> 
-            <!-- Andrea Perchiazzo &nbsp; <a href='https://andreaperchiazzo.com/' target='_blank' rel='noopener noreferrer'i class="fa fa-external-link" aria-hidden="true"></i> </a> -->
-            Andrea Perchiazzo &nbsp; <a href='https://www.unimi.it/en/ugov/person/andrea-perchiazzo' target='_blank' rel='noopener noreferrer'i class="fa fa-external-link" aria-hidden="true"></i> </a>
+            <!-- Andrea Perchiazzo &nbsp; <a href='https://www.unimi.it/en/ugov/person/andrea-perchiazzo' target='_blank' rel='noopener noreferrer'i class="fa fa-external-link" aria-hidden="true"></i> </a> -->
+            Andrea Perchiazzo &nbsp; <a href='https://andreaperchiazzo.com' target='_blank' rel='noopener noreferrer'i class="fa fa-external-link" aria-hidden="true"></i> </a>
 
             <br> 
             Edit Rroji &nbsp;  <a href='https://en.unimib.it/edit-rroji' target='_blank' rel='noopener noreferrer'><i class="fa fa-external-link" aria-hidden="true" ></i></a> 
