--- a/speaker-details_perchiazzo.html
+++ b/speaker-details_perchiazzo.html
@@ -62,8 +62,8 @@
                         <h2>Andrea Perchiazzo</h2>
                         <p>Università degli Studi di Milano (UNIMI)</p>
                         <div class="social">
-                            <!--                             <a href='https://andreaperchiazzo.com/' target='_blank'
-                                rel='noopener noreferrer'><i class="fa fa-link" aria-hidden="true"></i></a> -->
+                            <a href='https://andreaperchiazzo.com/' target='_blank'
+                                rel='noopener noreferrer'><i class="fa fa-link" aria-hidden="true"></i></a>
                             <a href='https://www.unimi.it/en/ugov/person/andrea-perchiazzo' target='_blank'
                                 rel='noopener noreferrer'><i class="fa fa-university" aria-hidden="true"></i></a>
                         </div>
