--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
           <li><a href="#schedule">Speakers & event schedule</a></li>
           <li><a href="#venue">Venue</a></li>
           <li><a href="#sponsors">Sponsors</a></li>
-          <li class="buy-tickets"><a href="https://forms.office.com/Pages/ResponsePage.aspx?id=7161ExhwdEaj18wNsG1UXJICTKnh0CpFhCUlsDkQ-PxUQ040SjNEWVBVN0NFVktQRFIyVFNHVUtKNS4u&embed=true" class="venobox about-btn mb-4" data-vbtype="iframe"
-          data-autoplay="true">Registration</span> </a></li>
+          <!-- <li class="buy-tickets"><a href="https://forms.office.com/Pages/ResponsePage.aspx?id=7161ExhwdEaj18wNsG1UXJICTKnh0CpFhCUlsDkQ-PxUQ040SjNEWVBVN0NFVktQRFIyVFNHVUtKNS4u&embed=true" class="venobox about-btn mb-4" data-vbtype="iframe" -->
+          <!-- data-autoplay="true">Registration</span> </a></li> -->
         </ul>
       </nav><!-- #nav-menu-container -->
     </div>
@@ -68,9 +68,9 @@
       <br>
       <br>
       <br>
-
-      <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=7161ExhwdEaj18wNsG1UXJICTKnh0CpFhCUlsDkQ-PxUQ040SjNEWVBVN0NFVktQRFIyVFNHVUtKNS4u&embed=true" class="venobox button mb-4" data-vbtype="iframe"
-          data-autoplay="false">Register now</span> </a>
+      <p class="mb-4 pb-0">REGISTRATION IS NOW CLOSED</p>
+      <!-- <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=7161ExhwdEaj18wNsG1UXJICTKnh0CpFhCUlsDkQ-PxUQ040SjNEWVBVN0NFVktQRFIyVFNHVUtKNS4u&embed=true" class="venobox button mb-4" data-vbtype="iframe"
+          data-autoplay="false">Register now</span> </a> -->
     </div>
   </section>
   <main id="main">
