--- a/index.html
+++ b/index.html
@@ -153,8 +153,10 @@
                 <p>Anna Battauz</p>
                 <h4>Optimal Liquidation Policies of Redeemable Shares <a href='speaker-details_battauz.html' target='_blank' rel='noopener noreferrer'i class="venobox fa fa-link"  data-vbtype="iframe" aria-hidden="true"></i> </a></h4> 
                 <br>
-                <p>Emanuele Guidotti</p>
-                <h4>Efficient estimation of bid–ask spreads from open, high, low, and close prices <a href='speaker-details_guidotti.html' target='_blank' rel='noopener noreferrer'i class="venobox fa fa-link"  data-vbtype="iframe" aria-hidden="true"></i> </a></h4> 
+                <p>An Chen</p>
+                <h4>The Role of Ambiguity Aversion in Consumer Purchasing Decision <a href='speaker-details_chen.html' target='_blank' rel='noopener noreferrer'i class="venobox fa fa-link"  data-vbtype="iframe" aria-hidden="true"></i> </a></h4> 
+                <!-- <p>Emanuele Guidotti</p>
+                <h4>Efficient estimation of bid–ask spreads from open, high, low, and close prices <a href='speaker-details_guidotti.html' target='_blank' rel='noopener noreferrer'i class="venobox fa fa-link"  data-vbtype="iframe" aria-hidden="true"></i> </a></h4>  -->
                
         <br>
         <p>Chair: Lorenzo Mercuri</p>
@@ -256,8 +258,8 @@
             <div class="row schedule-item">
               <div class="col-md-2"><time>09:30 - 10:30, Session 5</time></div>
               <div class="col-md-10">
-                <p>An Chen</p>
-                <h4>The Role of Ambiguity Aversion in Consumer Purchasing Decision <a href='speaker-details_chen.html' target='_blank' rel='noopener noreferrer'i class="venobox fa fa-link"  data-vbtype="iframe" aria-hidden="true"></i> </a></h4> 
+                <p>Emanuele Guidotti</p>
+                <h4>Efficient estimation of bid–ask spreads from open, high, low, and close prices <a href='speaker-details_guidotti.html' target='_blank' rel='noopener noreferrer'i class="venobox fa fa-link"  data-vbtype="iframe" aria-hidden="true"></i> </a></h4> 
                 <br>
                 <p>Francesco Della Corte</p>
                 <h4>Market-consistent valuation and Capital Assessment for Demographic Risk in Life Insurance: A Cohort Approach 
